# supergene

./: .env  .gitignore  .pdm-python  LICENSE  LICENSE.txt  README.md  mkdocs.yml  package.json  project.toml  pyproject.toml  scripts.js  setup.py  supergene.code-workspace
docs/: index.md
docs/chapters/: 00002.txt  00005.txt  00012.txt  00013.txt  00014.txt  00015.txt  00017.txt  00018.txt  00025.txt  00027.txt  00032.txt  00033.txt  00039.txt  00040.txt  00043.txt  00049.txt  00057.txt  00058.txt  00060.txt  00061.txt  00062.txt  00063.txt  00064.txt  00071.txt  00073.txt  00076.txt  00077.txt  00078.txt  00080.txt  00081.txt  00087.txt  00088.txt  00089.txt  00090.txt  00093.txt  00094.txt  00095.txt  00096.txt  00097.txt  00105.txt  (+1324 more)
docs/stylesheets/: styles.css
src/embeddings/: torch.py
src/notion/: migrate.py
src/scratch/: blockquote.py
src/supergene/: __chapter.py  __init__.py  _chapter.py  audio.py  base_chapter.py  chapter.py  chapter_header.py  chapter_title.py  chapters.py  client.py  connect.py  console.py  embedding.py  embeddings.py  index.py  mongo.py  object_id.py  parse_trim.py  progress.py  toc.py  unparsed.py  v0_0_1.py  v0_0_3.py  v3.py  v4.py  v5.py
src/tui/: 0009.md  markdown.py  viewer.py
src/v3/: __init__.py  _chapter.py  _mongo.py  blockquote.py  chapter.py  chapter_header.py  chapter_title.py  concat.ipynb  concat.py  console.py  embeddings.py  index.py  mongo.py  parse_trim.py  progress.py  v0_0_2.py
static/: meta.json  styles.css  toc.json  voice_of_the_world.txt
static/Patterns/: vog.md  voice_of_the_world.py
static/chapters/: 00001.txt  00003.txt  00004.txt  00006.txt  00007.txt  00008.txt  00009.txt  00010.txt  00011.txt  00016.txt  00019.txt  00020.txt  00021.txt  00022.txt  00023.txt  00024.txt  00026.txt  00028.txt  00029.txt  00030.txt  00031.txt  00034.txt  00035.txt  00036.txt  00037.txt  00038.txt  00041.txt  00042.txt  00044.txt  00045.txt  00046.txt  00047.txt  00048.txt  00050.txt  00051.txt  00052.txt  00053.txt  00054.txt  00055.txt  (+1844 more)
styles/: styles.css
super-gene/: __main__.py
supergene/: __main__.py
templates/: base.html  base.html.jinja  chapter.html  chapters.html
(+6610 files in other folders)
