[project]
name = "supergene"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Max Ludden", email = "dev@maxludden.com" }
]
dependencies = [
    "rich>=13.9.3",
    "jinja2>=3.1.4",
    "mkdocs>=1.6.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/supergene"]
