[project]
name = "supergene"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Max Ludden", email = "dev@maxludden.com" }
]
dependencies = [
    "rich>=13.9.3",
    "jinja2>=3.1.4",
    "mkdocs>=1.6.1",
    "e>=1.4.5",
    "mkdocs-material>=9.5.43",
    "setuptools>=75.3.0",
    "pip>=24.3.1",
    "markdown-it-py>=3.0.0",
    "ludden-logging>=0.1.8",
    "fastapi>=0.115.4",
    "sqlmodel>=0.0.22",
    "supabase>=2.10.0",
    "pydantic>=2.9.2",
    "pydantic-extra-types>=2.10.0",
    "pydantic-settings>=2.6.1",
    "fastapi-cli>=0.0.5",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/supergene"]
