[project]
name = "supergene"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Max Ludden", email = "dev@maxludden.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.5",
    "loguru-mypy>=0.0.4",
    "loguru>=0.7.3",
    "mkdocs>=1.6.1",
    "mypy>=1.14.0",
    "openai>=1.59.6",
    "pip>=24.3.1",
    "pymongo>=4.10.1",
    "rich>=13.9.4",
    "rich-gradient>=0.1.7",
    "selenium>=4.27.1",
    "webdriver-manager>=4.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
ignore = ['F401']
